clang/test/BSC/Negative/SafeZone/union_forbidden/union_mutual_nested_union.cbs
// RUN: %clang_cc1 -verify %s

// Union types are now allowed in safe zones, only member access is forbidden

void mutualNestedUnionDef() {
    union U {};
    _Safe {
        // ok: struct containing union is allowed in safe zone
        struct S4 { // expected-note{{definition of 'struct S4' is not complete until the closing '}'}}
            struct S3 {
                struct S2 {
                    struct S1 {
                        struct S4 s4; // expected-error{{field has incomplete type 'struct S4'}}
                        union U u;
                    } s1;
                } s2;
            } s3;
        };
    }
}

void mutalNestedUnionDecl() {
    union U {};
    struct S1; // expected-note{{forward declaration of 'struct S1'}}
    struct S2 { struct S1 s1; };  // expected-error{{field has incomplete type 'struct S1'}}
    struct S3 { struct S2 s2; };
    struct S4 { struct S3 s3; };
    struct S1 { struct S4 s4; union U u; };
    _Safe {
        // ok: declaring structs containing unions is allowed in safe zone
        struct S1 s1 = {};
        struct S2 s2 = {};
        struct S3 s3 = {};
        struct S4 s4 = {};
    }
}